--- a/Restaurant_Analytics_Level_1_Shantanu_Das.ipynb
+++ b/Restaurant_Analytics_Level_1_Shantanu_Das.ipynb
@@ -35,6 +35,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Done by - Shantanu Das"
+      ],
+      "metadata": {
+        "id": "i_5-YyC6hdv5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Contact info:\n",
+        "  * email: shantheartist420@gmail.com\n",
+        "  * [GitHub](https://github.com/trucoshan)\n",
+        "  * [My Website](https://datashan.xyz/)\n",
+        "  * [Linkedin](https://www.linkedin.com/in/datashan/)"
+      ],
+      "metadata": {
+        "id": "Yruu3w_2hhdE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Acknowledgement   \n"
       ],
       "metadata": {
